--- a/css/main.css
+++ b/css/main.css
@@ -85,24 +85,6 @@ a:hover {
 	color: #000;
 }
 
-/*
-.buttonLight {
-	padding: .5em;
-	background-color: white;
-	border: 1px solid white;
-	color: black;
-	transition : all .125s ease-in;
-}
-.buttonLight:hover {
-	background-color: black;
-	border: 1px solid black;
-	color: white;
-}
-.buttonLight:hover i, .buttonLight:hover h0 {
-	color: white;
-}
-*/
-
 small {
 	font-size: .8em;
 	text-transform: uppercase;
@@ -180,14 +162,9 @@ iframe {
 		font-size: 3em;
 	}
 }
-/*
-@media (min-width: 721px) {
-	h1 {
-		font-size: 3em;
-	}
-	h2 {
-		font-size: 3em;
-	}
+
+/*style components*/
+.shadowWhite{
+/*	box-shadow: 0 0 4px 4px white;*/
 }
-*/
 
