--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,14 @@ body {
 }
 /*General Inline*/
 h1 {
-	font-size: 8em;
+	font-size: 10em;
 	font-weight: 400;
 	line-height: 1em;
 	text-transform: lowercase;
 	margin-top: 16px;
 	padding-bottom: 16px;
 	letter-spacing: -.01em;
+	max-width: 720px;
 }
 h2{
 	font-size: 4em;
