added Breathe and svg intro

--- a/css/home.css
+++ b/css/home.css
@@ -12,18 +12,15 @@ section.sectionTiles.sorting {
 	opacity: 0;
 }
 
-section.intro {
-/*
-	display: flex;
-	flex-direction: column;
-*/
-/*	justify-content: center;*/
-/*	align-content: center;*/
-/*	align-items: center;*/
-}
 section.intro#top{
 	background: white;
 	justify-content: center;
+	text-align: center;
+}
+
+.selfPortrait {
+	height: 100%;
+	width: auto;
 }
 
 section.intro#tagline{
@@ -79,6 +76,21 @@ section#timeline i {
 	left: 100%;
 	margin-left: 4.57px;
 	margin-top: -8px;
+}
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 10s linear alternate infinite;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 #introVid {
