--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,4 @@
+/*all*/
 section.sectionTiles {
     display: flex;
     flex-direction: column;
@@ -8,70 +9,25 @@ section.sectionTiles {
     opacity: 1;
     transition: all .33s ease;
 }
-
 section.sectionTiles.sorting {
     opacity: 0;
 }
+section.heightWindow {
+    height: 100%;
+}
 
+/*intro*/
 section.intro#top {
     background: white;
     justify-content: center;
     max-width: 360px;
     padding-top: 1em;
 }
-
 section.intro#top p {
     text-align: center;
 }
 
-.selfPortrait {
-    height: 100%;
-    width: auto;
-}
-
-section.intro#tagline {
-    justify-content: center;
-    align-items: center;
-}
-
-section.intro#tagline div {
-    background: white;
-    text-align: center;
-}
-
-section.intro#tagline div p:nth-child(2) {
-    margin-bottom: 0;
-}
-
-section#contactAnchor {
-    background: white;
-}
-
-section#contactAnchor form {
-    max-width: 360px;
-}
-
-section#contactAnchor form fieldset {
-    display: flex;
-    border: 0;
-    margin-bottom: 2em;
-}
-
-section#contactAnchor form fieldset * {
-    width: 100%;
-    color: black;
-}
-
-section#contactAnchor form fieldset input,
-textarea {
-    border: 1px solid black;
-    padding: .25em;
-}
-
-section.heightWindow {
-    height: 100%;
-}
-
+/*arrow*/
 section#timeline {
     z-index: -1;
     position: fixed;
@@ -82,7 +38,6 @@ section#timeline {
     align-self: flex-start;
     height: 66%;
 }
-
 section#timeline i {
     position: relative;
     top: 100%;
@@ -91,52 +46,18 @@ section#timeline i {
     margin-top: -8px;
 }
 
-.path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    animation: dash 10s linear alternate infinite;
-}
-
-@keyframes dash {
-    from {
-        stroke-dashoffset: 1000;
-    }
-    to {
-        stroke-dashoffset: 0;
-    }
-}
-
-#introVid {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    opacity: 1;
-    z-index: -2;
-}
-
-.tileHome {
+/*timeline tiles*/
+.sectionTiles > * {
     padding-top: 8px;
     min-height: 180px;
-    /*	transition: opacity .25s ease;*/
 }
-
-h1.tileHome {
+.sectionTiles > h1 {
     align-self: flex-start;
     min-height: auto;
 }
-
-.tileHome:not(h1) {
+.sectionTiles > *:not(h1) {
     opacity: 0;
 }
-
 .node {
     display: inline-block;
     position: relative;
@@ -144,58 +65,6 @@ h1.tileHome {
     height: 16px;
     border-radius: 8px;
 }
-
-article.tileHome.work {
-    width: 100%;
-    max-width: 270px;
-    margin-top: 8px;
-    margin-bottom: 4em;
-    background: white;
-}
-
-article.tileHome.work .node {
-    position: relative;
-    z-index: 0;
-    margin-left: 50%;
-    left: -8.5px;
-    top: -8px;
-    background-color: #ff8296;
-}
-
-article.tileHome.recognition {
-    width: 50%;
-    text-align: right;
-    align-self: flex-start;
-    padding-right: .5em;
-}
-
-article.tileHome.recognition .node {
-    margin-right: -16px;
-    background-color: #006838;
-}
-
-article.tileHome.education {
-    width: 50%;
-    align-self: flex-end;
-    padding-left: .5em;
-}
-
-article.tileHome.education .node {
-    margin-left: -16px;
-    background-color: #2e3192;
-}
-
-article.tileHome.life {
-    width: 50%;
-    align-self: flex-end;
-    padding-left: .5em;
-}
-
-article.tileHome.life .node {
-    margin-left: -16px;
-    background-color: #ff0200;
-}
-
 .heroImage {
     display: inline-flex;
     background-position: center;
@@ -210,7 +79,71 @@ article.tileHome.life .node {
     float: left;
     padding-top: 100%;
 }
+article.work {
+    width: 100%;
+    max-width: 270px;
+    margin-top: 8px;
+    margin-bottom: 4em;
+    background: white;
+}
+article.work .node {
+	margin-left: 50%;
+	left: -8.5px;
+    top: -8px;
+    background-color: #ff8296;
+}
+article.recognition {
+    width: 50%;
+    text-align: right;
+    align-self: flex-start;
+    padding-right: .5em;
+}
+article.recognition .node {
+    margin-right: -16px;
+    background-color: #006838;
+}
+article.education {
+    width: 50%;
+    align-self: flex-end;
+    padding-left: .5em;
+}
+article.education .node {
+    margin-left: -16px;
+    background-color: #2e3192;
+}
+article.life {
+    width: 50%;
+    align-self: flex-end;
+    padding-left: .5em;
+}
+article.life .node {
+    margin-left: -16px;
+    background-color: #ff0200;
+}
 
-small {
-    display: none;
+/*contact form*/
+section#contactAnchor {
+    background: white;
+	display: flex;
+	align-items: center;
+}
+section#contactAnchor h1{
+	align-self: flex-start;
+}
+section#contactAnchor form {
+    max-width: 360px;
+}
+section#contactAnchor form fieldset {
+    display: flex;
+    border: 0;
+    margin-bottom: 2em;
+}
+section#contactAnchor form fieldset * {
+    width: 100%;
+    color: black;
+}
+section#contactAnchor form fieldset input,
+textarea {
+    border: 1px solid black;
+    padding: .25em;
 }
