--- a/css/project.css
+++ b/css/project.css
@@ -1,30 +1,9 @@
-section {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	flex-wrap: wrap;
-	padding-bottom: .5em;
-	width: 100%;
-}
-
-
-.tileHome {
-/*	border-top: 1px solid black;*/
-/*	margin-right: 8px;*/
-	padding-top: 8px;
-/*	height: 100%;*/
-	min-height: 180px;
-}
-
 h1{
 	align-self: flex-start;
-	min-height: auto;
-
 }
 p{
 	align-self: flex-start;
 }
-
 article {
 	width: 100%;
 	max-width: 450px;
@@ -33,32 +12,17 @@ article {
 article img{
 	width: 100%;
 }
-
-.heroImage {
-	display: inline-flex;
-	background-position: center;
-	background-size: cover;
-/*	width: 100px;*/
-	width: 100%;
-	margin-bottom: .5em;
-}
-.heroImage:before{
-    content:'';
-    float:left;
-    padding-top:100%;
-}
-small {
-	display: none;
-}
-
-.projectHero {
-	width: 100%;
-	height: 270px;
+article#clickouts {
+	display: flex;
+	justify-content: space-between;
 }
 
 @media (max-width: 720px) {
 	p:not(.caption){
 		margin-left: 18px;
+	}
+	article#clickouts {
+		flex-direction: column;
 	}
 }
 @media (min-width: 721px) {
