made more IE-friendly, added Gato doc.

--- a/css/loading.css
+++ b/css/loading.css
@@ -22,6 +22,7 @@ section#loading {
 	transition-delay: 1s;
 	z-index: 2;
 	top: 0;
+	left: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
