php-based redesign

--- a/css/header.css
+++ b/css/header.css
@@ -1,86 +1,5 @@
-header {
-	background: white;
-	position: fixed;
-	display: flex;
-	width: 100%;
-	z-index: 2;
-}
-
-/*buttons*/
-header a.button {
-	border: none;
-	color: black;
-	background: white;
-	margin-bottom: 0;
-}
-header a.button i {
-	color: black;
-}
-header a.button:hover{
-	border: none;
-	color: white;
-	background: black;
-}
-header a.button:hover i{
-	color: white;
-}
-header nav#tabs a[sort="work"]:hover{
-	background-color: #ff8296;
-}
-header nav#tabs a[sort="aboutMe"]:hover{
-	background-color:#006838;
-}
-header nav#tabs a[sort="all"]:hover{
-	background-color: #00aeef;
-}
-
-
-@media (max-width: 720px) {
-	header {
-		flex-direction: column;
-	}
-	header div#topMobile {
-		display: flex;
-		justify-content: space-between;
-	}
-	/*hide buttons until hover*/
-	header nav {
-		display: none;
-	}
-	header:hover nav {
-		display: block;
-	}
-	
-	header nav a {
-		display: flex;
-		flex-direction: column;
-	}
-	header nav a.button {
-		background: black;
-		color: white;
-		width: 100%;
-		text-align: center;
-	}
-	header nav a.button i{
-		color: white;
-	}
-	header a.button:hover {
-		background: white;
-	}
-	header a.button:hover i, header a.button[sort="contact"]:hover {
-		color: black;
-	}
-}
-@media (min-width: 721px) {
-	header {
-		justify-content: space-between;
-	}
-	header * {
-		display: flex;
-	}
-	
-	/*buttons*/
-	header div a#hamburger{
-		display: none;
-	}
+img#catface {
+  border: 0;
+  height: 72px;
+  width: auto;
 }
