--- a/css/home.css
+++ b/css/home.css
@@ -1,149 +1,3 @@
-/*all*/
-section.sectionTiles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-bottom: .5em;
-    width: 100%;
-    opacity: 1;
-    transition: all .33s ease;
-}
-section.sectionTiles.sorting {
-    opacity: 0;
-}
-section.heightWindow {
-    height: 100%;
-}
-
-/*intro*/
-section.intro#top {
-    background: white;
-    justify-content: center;
-    max-width: 720px;
-    padding-top: 1em;
-}
-section.intro#top p {
-    text-align: center;
-}
-
-/*arrow*/
-section#timeline {
-    z-index: -1;
-    position: fixed;
-    border-right: 1px solid black;
-    width: 50%;
-    top: 16px;
-    left: 0;
-    align-self: flex-start;
-    height: 66%;
-}
-section#timeline i {
-    position: relative;
-    top: 100%;
-    left: 100%;
-    margin-left: 4.57px;
-    margin-top: -8px;
-}
-
-/*timeline tiles*/
-.sectionTiles > * {
-    padding-top: 8px;
-    min-height: 180px;
-}
-.sectionTiles > h1 {
-    align-self: flex-start;
-    min-height: auto;
-}
-.sectionTiles > *:not(h1) {
-    opacity: 0;
-}
-.node {
-    display: inline-block;
-    position: relative;
-    width: 16px;
-    height: 16px;
-    border-radius: 8px;
-}
-.heroImage {
-    display: inline-flex;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    margin-bottom: .5em;
-    border: 1px solid black;
-}
-
-.heroImage:before {
-    content: '';
-    float: left;
-    padding-top: 100%;
-}
-article.work {
-    width: 100%;
-    max-width: 270px;
-    margin-top: 8px;
-    margin-bottom: 4em;
-    background: white;
-}
-article.work .node {
-	margin-left: 50%;
-	left: -8.5px;
-    top: -8px;
-    background-color: #ff8296;
-}
-article.recognition {
-    width: 50%;
-    text-align: right;
-    align-self: flex-start;
-    padding-right: .5em;
-}
-article.recognition .node {
-    margin-right: -16px;
-    background-color: #006838;
-}
-article.education {
-    width: 50%;
-    align-self: flex-end;
-    padding-left: .5em;
-}
-article.education .node {
-    margin-left: -16px;
-    background-color: #2e3192;
-}
-article.life {
-    width: 50%;
-    align-self: flex-end;
-    padding-left: .5em;
-}
-article.life .node {
-    margin-left: -16px;
-    background-color: #ff0200;
-}
-
-/*contact form*/
-section#contactAnchor {
-    background: white;
-	display: flex;
-	align-items: center;
-}
-section#contactAnchor h1{
-	align-self: flex-start;
-}
-section#contactAnchor form {
-    max-width: 360px;
-}
-section#contactAnchor form fieldset {
-    display: flex;
-    border: 0;
-    margin-bottom: 2em;
-}
-section#contactAnchor form fieldset * {
-    width: 100%;
-    color: black;
-}
-section#contactAnchor form fieldset input,
-textarea {
-    border: 1px solid black;
-    padding: .25em;
+i.fa-caret-down {
+  transition: transform .125s ease-in;
 }
