Revert "php-based redesign"
This reverts commit f9acbd1bb5c157b9b2676b7f53700b8ea4b65b43.

--- a/css/loading.css
+++ b/css/loading.css
@@ -1,39 +1,34 @@
 /*use css to hide the page until fonts are loaded*/
-.wf-loading header,
-.wf-loading section:not(#loading),
-.wf-loading article {
-  visibility: hidden;
-  display: none;
-  overflow: hidden;
+.wf-loading header, .wf-loading section:not(#loading), .wf-loading article {
+    visibility: hidden;
+	display: none;
+	overflow: hidden;
+ }
+html.wf-loading section#loading{
+	opacity: 1;
 }
-
-html.wf-loading #loading {
-  opacity: 1;
-}
-
-html:not(.wf-loading) #loading {
-  opacity: 0;
-  pointer-events: none;
+html:not(.wf-loading) section#loading {
+	opacity: 0;
+	pointer-events: none;
 }
 
 /*loading screen*/
-#loading {
-  background: white;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  transition: opacity .5s ease;
-  transition-delay: 1s;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+section#loading {
+	background: white;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	transition: opacity .5s ease;
+	transition-delay: 1s;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
-#loading img {
-  border: none;
-  width: 180px;
-  height: 180px;
+section#loading img {
+	border: none;
+	width: 180px;
+	height: 180px;
 }
