Apply new structure to all pages except index

--- a/css/header.css
+++ b/css/header.css
@@ -1,14 +1,10 @@
 header {
-	display: flex;
-	flex-direction: row;
-	align-content: flex-start;
-	position: fixed;
-	top: 0;
-	left: 0;
+	flex: 0 0 4em;
+	margin: .5em;
 }
 
 header a {
-	padding: .5em 0 0 .5em;
+	position: fixed;
 }
 
 img#catface {
