--- a/css/utilities.css
+++ b/css/utilities.css
@@ -6,10 +6,13 @@
   padding-top: 0 !important;
 }
 .m-t-0{
-  margin-top: 0;
+  margin-top: 0 !important;
 }
 .m-b-0{
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
+}
+.m-b-1{
+  margin-bottom: 1em !important;
 }
 /*borders*/
 .b-t-0 {
